add alert <p> and validate function
add alert <p> to show input errors, validate function to validate input
is a number .

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <input id="mpg-min" type="text" value="0" size="10">
             <input id="mpg-max" type="text" value="30" size="10">
             <button id="update">Query MPG</button>
+            <p id="alert"></p>
         </div>
         </div>
     </body>
